fix: centre aligned images

--- a/app/styles/_episode.scss
+++ b/app/styles/_episode.scss
@@ -1,6 +1,5 @@
 #episode img{
     @extend .img-responsive;
-    @extend .center-block;
     @extend .img-thumbnail;
 }
 
